--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed = new Typed('.auto-type', {
-            strings: ["Mainul Abedin Fahim.", "A Web Developer.", "An Enterpreneur."],
+            strings: ["Mainul Abedin Fahim.", "A Web Developer.", "An Entrepreneur."],
             typeSpeed: 100,
             backSpeed:100,
             loop:true
