--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="header">
         <nav>
@@ -22,7 +24,8 @@
 
         <div class="text-book">
             <h1>I'm <span class="auto-type"></span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat doloribus <br> hic voluptates, suscipit reiciendis officiis laudantium .</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat doloribus <br> hic voluptates, suscipit
+                reiciendis officiis laudantium .</p>
 
             <a href="#">Contact Me</a>
             <a href="#" class="btn">Download CV</a>
@@ -35,10 +38,11 @@
         var typed = new Typed('.auto-type', {
             strings: ["Mainul Abedin Fahim.", "A Web Developer.", "An Entrepreneur."],
             typeSpeed: 100,
-            backSpeed:100,
-            loop:true
+            backSpeed: 100,
+            loop: true
         });
     </script>
 
 </body>
+
 </html>
